went through chapters 2-5, corrected stuff.

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,4 +1,123 @@
 
+@article{Bouchard:2013mia,
+      author         = "Bouchard, Chris and Lepage, G. Peter and Monahan,
+                        Christopher and Na, Heechang and Shigemitsu, Junko",
+			      title          = "{Standard Model Predictions for $B \to K \ell^+ \ell^-$
+                        with Form Factors from Lattice QCD}",
+			      collaboration  = "HPQCD",
+			            journal        = "Phys. Rev. Lett.",
+				          volume         = "111",
+					        year           = "2013",
+						      number         = "16",
+						            pages          = "162002",
+							          doi            = "10.1103/PhysRevLett.112.149902,
+                        10.1103/PhysRevLett.111.162002",
+			      note           = "[Erratum: Phys. Rev. Lett.112,no.14,149902(2014)]",
+			            eprint         = "1306.0434",
+				          archivePrefix  = "arXiv",
+					        primaryClass   = "hep-ph",
+						      SLACcitation   = "%%CITATION = ARXIV:1306.0434;%%"
+						      }
+
+
+@article{Bobeth:2007dw,
+      author         = "Bobeth, Christoph and Hiller, Gudrun and Piranishvili,
+                        Giorgi",
+			      title          = "{Angular distributions of $\bar{B} \to \bar{K}
+                        \ell^+\ell^-$ decays}",
+			      journal        = "JHEP",
+			            volume         = "12",
+				          year           = "2007",
+					        pages          = "040",
+						      doi            = "10.1088/1126-6708/2007/12/040",
+						            eprint         = "0709.4174",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ph",
+									      reportNumber   = "DO-TH-07-07",
+									            SLACcitation   = "%%CITATION = ARXIV:0709.4174;%%"
+										    }
+										    
+
+
+@article{Guadagnoli:2005be,
+   author         = "Guadagnoli, D. and Mescia, F. and Simula, S.",
+      title          = "{Lattice study of semileptonic form-factors with twisted
+                  boundary conditions}",
+		     journal        = "Phys. Rev.",
+		        volume         = "D73",
+			   year           = "2006",
+			      pages          = "114504",
+			        doi            = "10.1103/PhysRevD.73.114504",
+				   eprint         = "hep-lat/0512020",
+				      archivePrefix  = "arXiv",
+				         primaryClass   = "hep-lat",
+					    reportNumber   = "RM3-TH-05-14, ROME1-1421-2005",
+					       SLACcitation   = "%%CITATION = HEP-LAT/0512020;%%"
+					       }
+					       
+
+@article{Hestenes&Stiefel:1952,
+  added-at = {2008-10-07T16:03:39.000+0200},
+    author = {Hestenes, M. R. and Stiefel, E.},
+      biburl = {https://www.bibsonomy.org/bibtex/2362a03244482b96f9f9ee4af6eb7f80c/brefeld},
+        interhash = {bcb34a6f8b9fb2f2371e92430116a8ad},
+	  intrahash = {362a03244482b96f9f9ee4af6eb7f80c},
+	    journal = {Journal of research of the National Bureau of Standards},
+	      keywords = {imported},
+	        pages = {409--436},
+		  timestamp = {2008-10-07T16:03:39.000+0200},
+		    title = {Methods of conjugate gradients for solving linear systems},
+		      volume = 49,
+		        year = 1952
+			}
+			
+@article{PhysRevLett.49.613,
+  title = {Microcanonical Ensemble Formulation of Lattice Gauge Theory},
+    author = {Callaway, David J. E. and Rahman, Aneesur},
+      journal = {Phys. Rev. Lett.},
+        volume = {49},
+	  issue = {9},
+	    pages = {613--616},
+	      numpages = {0},
+	        year = {1982},
+		  month = {Aug},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevLett.49.613},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevLett.49.613}
+			}
+
+
+@article{PhysRevD.28.1506,
+  title = {Lattice gauge theory in the microcanonical ensemble},
+    author = {Callaway, David J. E. and Rahman, Aneesur},
+      journal = {Phys. Rev. D},
+        volume = {28},
+	  issue = {6},
+	    pages = {1506--1514},
+	      numpages = {0},
+	        year = {1983},
+		  month = {Sep},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevD.28.1506},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevD.28.1506}
+			}
+
+
+@article{PhysRevLett.55.2774,
+  title = {Hybrid Stochastic Differential Equations Applied to Quantum Chromodynamics},
+    author = {Duane, Simon and Kogut, John B.},
+      journal = {Phys. Rev. Lett.},
+        volume = {55},
+	  issue = {25},
+	    pages = {2774--2777},
+	      numpages = {0},
+	        year = {1985},
+		  month = {Dec},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevLett.55.2774},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevLett.55.2774}
+			}
+
 @inproceedings{Koponen:2013ila,
       author         = "Koponen, Jonna",
             title          = "{Lattice results for $D/D_s$ leptonic and semileptonic
@@ -717,6 +836,23 @@
 									      primaryClass   = "hep-ex",
 									            reportNumber   = "SLAC-REPRINT-1998-103, CLNS-98-1594, CLEO-98-18",
 										          SLACcitation   = "%%CITATION = HEP-EX/9811042;%%"
+											  }
+
+@article{Aubert:2006cx,
+      author         = "Aubert, Bernard and others",
+            title          = "{Measurements of the $B \to D^{*}$ form-factors using the
+                        decay $\bar{B}^0 \to D^{*+} e^{-}$ electron-neutrino}",
+			      collaboration  = "BaBar",
+			            journal        = "Phys. Rev.",
+				          volume         = "D74",
+					        year           = "2006",
+						      pages          = "092004",
+						            doi            = "10.1103/PhysRevD.74.092004",
+							          eprint         = "hep-ex/0602023",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ex",
+									            reportNumber   = "SLAC-PUB-11672, BABAR-PUB-05-052",
+										          SLACcitation   = "%%CITATION = HEP-EX/0602023;%%"
 											  }
 
 @article{Aubert:2009ac,
@@ -2605,6 +2741,23 @@ author = "I.S. Altarev and Yu.V. Borisov and N.V. Borovikova and S.N. Ivanov and
       SLACcitation   = "%%CITATION = ARXIV:0903.3598;%%"
 }
 
+@article{Dowdall:2013rya,
+      author         = "Dowdall, R. J. and Davies, C. T. H. and Lepage, G. P. and
+                        McNeile, C.",
+			      title          = "{Vus from pi and K decay constants in full lattice QCD
+                       with physical u, d, s and c quarks}",
+		             journal        = "Phys. Rev.",
+			           volume         = "D88",
+				         year           = "2013",
+					       pages          = "074504",
+					             doi            = "10.1103/PhysRevD.88.074504",
+						           eprint         = "1303.1670",
+							         archivePrefix  = "arXiv",
+								       primaryClass   = "hep-lat",
+								            SLACcitation   = "%%CITATION = ARXIV:1303.1670;%%"
+									    }
+
+
 @article{Dowdall:2013tga,
       author         = "Dowdall, R. J. and Davies, C. T. H. and Horgan, R. R. and
                         Monahan, C. J. and Shigemitsu, J.",
@@ -2698,6 +2851,7 @@ abstract = "Symanzik's programme for constructing a lattice action with improved
 										          SLACcitation   = "%%CITATION = ARXIV:0812.0503;%%"
 											  }
 
+
 @article{luscher1985,
 author = "Lüscher, M. and Weisz, P.",
 fjournal = "Communications in Mathematical Physics",
@@ -2710,3 +2864,211 @@ url = "https://projecteuclid.org:443/euclid.cmp/1103941978",
 volume = "97",
 year = "1985"
 }
+
+@article{duane1986,
+author = {Duane, Simon and Kogut, John},
+year = {1986},
+month = {11},
+pages = {398-420},
+title = {The theory of hybrid stochastic algorithms},
+volume = {275},
+journal = {Nuclear Physics B},
+doi = {10.1016/0550-3213(86)90606-1}
+}
+
+@article{doi:10.1063/1.1699114,
+author = {Metropolis,Nicholas  and Rosenbluth,Arianna W.  and Rosenbluth,Marshall N.  and Teller,Augusta H.  and Teller,Edward },
+title = {Equation of State Calculations by Fast Computing Machines},
+journal = {The Journal of Chemical Physics},
+volume = {21},
+number = {6},
+pages = {1087-1092},
+year = {1953},
+doi = {10.1063/1.1699114},
+URL = { 
+        https://doi.org/10.1063/1.1699114
+},
+eprint = { 
+        https://doi.org/10.1063/1.1699114
+    
+}
+}
+
+
+@article{DUANE1987216,
+title = "Hybrid Monte Carlo",
+journal = "Physics Letters B",
+volume = "195",
+number = "2",
+pages = "216 - 222",
+year = "1987",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(87)91197-X",
+url = "http://www.sciencedirect.com/science/article/pii/037026938791197X",
+author = "Simon Duane and A.D. Kennedy and Brian J. Pendleton and Duncan Roweth",
+abstract = "We present a new method for the numerical simulation of lattice field theory. A hybrid (molecular dynamics/Langevin) algorithm is used to guide a Monte Carlo simulation. There are no discretization errors even for large step sizes. The method is especially efficient for systems such as quantum chromodynamics which contain fermionic degrees of freedom. Detailed results are presented for four-dimensional compact quantum electrodynamics including the dynamical effects of electrons."
+}
+
+@article{PhysRevD.35.2531,
+  title = {Hybrid-molecular-dynamics algorithms for the numerical simulation of quantum chromodynamics},
+    author = {Gottlieb, Steven and Liu, W. and Toussaint, D. and Renken, R. L. and Sugar, R. L.},
+      journal = {Phys. Rev. D},
+        volume = {35},
+	  issue = {8},
+	    pages = {2531--2542},
+	      numpages = {0},
+	        year = {1987},
+		  month = {Apr},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRevD.35.2531},
+		        url = {https://link.aps.org/doi/10.1103/PhysRevD.35.2531}
+			}
+
+
+@article{Clark:2006fx,
+      author         = "Clark, M. A. and Kennedy, A. D.",
+            title          = "{Accelerating dynamical fermion computations using the
+                        rational hybrid Monte Carlo (RHMC) algorithm with multiple
+                        pseudofermion fields}",
+			      journal        = "Phys. Rev. Lett.",
+			            volume         = "98",
+				          year           = "2007",
+					        pages          = "051601",
+						      doi            = "10.1103/PhysRevLett.98.051601",
+						            eprint         = "hep-lat/0608015",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = HEP-LAT/0608015;%%"
+									      }
+
+
+@article{Frommer:1995ik,
+      author         = "Frommer, Andreas and Nockel, Bertold and Gusken, Stephan
+                        and Lippert, Thomas and Schilling, Klaus",
+			      title          = "{Many masses on one stroke: Economic computation of quark
+                        propagators}",
+			      journal        = "Int. J. Mod. Phys.",
+			            volume         = "C6",
+				          year           = "1995",
+					        pages          = "627-638",
+						      doi            = "10.1142/S0129183195000538",
+						            eprint         = "hep-lat/9504020",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      reportNumber   = "HLRZ-95-20, WUB-95-12",
+									            SLACcitation   = "%%CITATION = HEP-LAT/9504020;%%"
+										    }
+
+
+@article{Jegerlehner:1996pm,
+      author         = "Jegerlehner, Beat",
+            title          = "{Krylov space solvers for shifted linear systems}",
+	          year           = "1996",
+		        eprint         = "hep-lat/9612014",
+			      archivePrefix  = "arXiv",
+			            primaryClass   = "hep-lat",
+				          reportNumber   = "IUHET-353",
+					        SLACcitation   = "%%CITATION = HEP-LAT/9612014;%%"
+
+
+@article{Bazavov:2012xda,
+      author         = "Bazavov, A. and others",
+            title          = "{Lattice QCD ensembles with four flavors of highly
+                        improved staggered quarks}",
+			      collaboration  = "MILC",
+			            journal        = "Phys. Rev.",
+				          volume         = "D87",
+					        year           = "2013",
+						      number         = "5",
+						            pages          = "054505",
+							          doi            = "10.1103/PhysRevD.87.054505",
+								        eprint         = "1212.4768",
+									      archivePrefix  = "arXiv",
+									            primaryClass   = "hep-lat",
+										          reportNumber   = "FERMILAB-PUB-12-796-T",
+											        SLACcitation   = "%%CITATION = ARXIV:1212.4768;%%"
+												}
+												}
+
+
+@article{Bazavov:2010ru,
+      author         = "Bazavov, A. and others",
+            title          = "{Scaling studies of QCD with the dynamical HISQ action}",
+	          collaboration  = "MILC",
+		        journal        = "Phys. Rev.",
+			      volume         = "D82",
+			            year           = "2010",
+				          pages          = "074501",
+					        doi            = "10.1103/PhysRevD.82.074501",
+						      eprint         = "1004.0342",
+						            archivePrefix  = "arXiv",
+							          primaryClass   = "hep-lat",
+								        SLACcitation   = "%%CITATION = ARXIV:1004.0342;%%"
+									}
+
+
+@article{Chakraborty:2014aca,
+      author         = "Chakraborty, Bipasha and Davies, C. T. H. and Galloway,
+                        B. and Knecht, P. and Koponen, J. and Donald, G. C. and
+                        Dowdall, R. J. and Lepage, G. P. and McNeile, C.",
+			      title          = "{High-precision quark masses and QCD coupling from
+                        $n_f=4$ lattice QCD}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D91",
+				          year           = "2015",
+					        number         = "5",
+						      pages          = "054508",
+						            doi            = "10.1103/PhysRevD.91.054508",
+							          eprint         = "1408.4169",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-lat",
+									            SLACcitation   = "%%CITATION = ARXIV:1408.4169;%%"
+										    }
+
+
+
+@article{JANSEN20043,
+title = "Actions for dynamical fermion simulations: are we ready to go?",
+journal = "Nuclear Physics B - Proceedings Supplements",
+volume = "129-130",
+pages = "3 - 16",
+year = "2004",
+note = "Lattice 2003",
+issn = "0920-5632",
+doi = "https://doi.org/10.1016/S0920-5632(03)02502-7",
+url = "http://www.sciencedirect.com/science/article/pii/S0920563203025027",
+author = "K. Jansen",
+abstract = "A critical review, playing devil's advocate, on present dynamical fermion simulations is given."
+}
+
+@article{CREUTZ2007230,
+title = "Chiral anomalies and rooted staggered fermions",
+journal = "Physics Letters B",
+volume = "649",
+number = "2",
+pages = "230 - 234",
+year = "2007",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/j.physletb.2007.03.065",
+url = "http://www.sciencedirect.com/science/article/pii/S0370269307003905",
+author = "Michael Creutz",
+abstract = "A popular approximation in lattice gauge theory is an extrapolation in the number of fermion species away from the four fold degeneracy natural with the staggered fermion formulation. I show that the procedure mutilates the expected continuum holomorphic behavior in the quark masses. This is due to a chiral symmetry group that is of a higher rank than desired. The conventional resolution proposes canceling the unphysical singularities with a plethora of extra states appearing at finite lattice spacing. This unproven conjecture requires an explicit loss of unitarity and locality. Even if correct, the approach implies large cutoff effects in the low-energy flavor-neutral sector."
+}
+
+@article{Creutz:2007rk,
+      author         = "Creutz, Michael",
+            title          = "{Why rooting fails}",
+	          booktitle      = "{Proceedings, 25th International Symposium on Lattice
+                        field theory  (Lattice 2007): Regensburg, Germany, July
+                        30-August 4, 2007}",
+			      journal        = "PoS",
+			            volume         = "LATTICE2007",
+				          year           = "2007",
+					        pages          = "007",
+						      doi            = "10.22323/1.042.0007",
+						            eprint         = "0708.1295",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = ARXIV:0708.1295;%%"
+									      }
+									      
