--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -53,11 +53,38 @@ All results and figures presented in these chapters are my own, except for ...
 
 \thispagestyle{empty}
 
-\vspace*{\stretch{2}}
-\begin{center}
-  \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
-\end{center}
-\vspace{\stretch{3}}
+%% \vspace*{\stretch{2}}
+%% \begin{center}
+%%   \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
+%% \end{center}
+%% \vspace{\stretch{3}}
+
+%% {\red{TODO:
+
+%%     intro to discrete Lorentz symmetries
+
+%%     mention how $SU(3)_C\times SU(2)_L \times U(1)_Y$ relates to electrom\
+%%     agnetism via EWSB.
+
+%%     a little more on hadrons in QCD section
+
+%%     add HQET form factors $h_{+,-}$ discussion to HQET section
+
+%%     tadpole improvement?
+
+%%     Neilsen-Ninomaya theorem in sec. 3.2.1?
+
+%%     READING LIST:
+    
+%%     Lenz, Flavour physics lectures. 1812.11211, 1703.08170
+
+%%     'The B-physics program' :https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4737432/\#andp201500230-sec-0020title
+
+%%     Chiral Anomalies and rooted staggered fermions - Creutz
+
+%%     Conjugate Gradient without the excruciating pain
+%% }}
+
 
 \end{titlepage}
 \sloppy
