--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -53,37 +53,30 @@ All results and figures presented in these chapters are my own, except for ...
 
 \thispagestyle{empty}
 
-%% \vspace*{\stretch{2}}
-%% \begin{center}
-%%   \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
-%% \end{center}
-%% \vspace{\stretch{3}}
+\vspace*{\stretch{2}}
+\begin{center}
+  \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
+\end{center}
+\vspace{\stretch{3}}
 
-%% {\red{TODO:
+{\red{TODO:
 
-%%     intro to discrete Lorentz symmetries
+    tadpole improvement?
 
-%%     mention how $SU(3)_C\times SU(2)_L \times U(1)_Y$ relates to electrom\
-%%     agnetism via EWSB.
+    Neilsen-Ninomaya theorem in sec. 3.2.1?
 
-%%     a little more on hadrons in QCD section
+    Chiral symmetry section - say why $B_s\to D_s$ and $B\to D$ are approx. equal.
 
-%%     add HQET form factors $h_{+,-}$ discussion to HQET section
-
-%%     tadpole improvement?
-
-%%     Neilsen-Ninomaya theorem in sec. 3.2.1?
-
-%%     READING LIST:
+    READING LIST:
     
-%%     Lenz, Flavour physics lectures. 1812.11211, 1703.08170
+    Lenz, Flavour physics lectures. 1812.11211, 1703.08170
 
-%%     'The B-physics program' :https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4737432/\#andp201500230-sec-0020title
+    'The B-physics program' :https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4737432/\#andp201500230-sec-0020title
 
-%%     Chiral Anomalies and rooted staggered fermions - Creutz
+    Chiral Anomalies and rooted staggered fermions - Creutz
 
-%%     Conjugate Gradient without the excruciating pain
-%% }}
+    Conjugate Gradient without the excruciating pain
+}}
 
 
 \end{titlepage}
