--- a/latticeqcd.tex
+++ b/latticeqcd.tex
@@ -507,6 +507,7 @@ Since we know $S$ is invariant under this transformation, it must be true that $
       \nonumber
       & - c_4 {1\over 2am_b} \sigma\cdot {\bf{\tilde{B}}} + c_5 {\nabla^{(4)}\over 24 am_b} \\
       & - c_6 {(\nabla^{(2)})^2\over 16n (am_b)^2}
+      \label{eq:nrqcd_dH}
     \end{align}
     where $\nabla^{(2,4)}$ are the second and fourth lattice derivative, ${\bf{\tilde{E}}}$ and ${\bf{\tilde{B}}}$ are the (Symmanzik improved) chromoelectric and chromomagnetic fields. The form of $\nabla^{(2,4)}$,${\bf{\tilde{E}}},{\bf{\tilde{B}}}$ are defined in sec. 4.2 of \cite{Lepage:1992tx}, and were improved upon in \cite{Gray:2005ur}.
 
